--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-img {
-    width: 20px;
-}
+
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -24,3 +22,6 @@ ul {
     padding: 15px 0;
 }
 
+.language-flag img {
+    width: 20px;
+}
